NMS-15489: Describe usage stats feature
- Update deployment/core/getting-started.adoc
- Update operation/deep-dive/admin/configuration/data-collection.adoc

--- a/docs/modules/deployment/pages/core/getting-started.adoc
+++ b/docs/modules/deployment/pages/core/getting-started.adoc
@@ -3,14 +3,12 @@
 = Installation and Configuration
 
 This section explains how to install and configure a new {page-component-title} instance.
-
-[[objectives-setup-core]]
-== Objectives
+It describes how to do the following tasks:
 
 * Install all required OpenNMS {page-component-title} components, including PostgreSQL, on a single node.
 * Run {page-component-title} core and PostgreSQL with the default configuration.
 +
-NOTE: The default configuration is not optimized to run in production or monitor large networks.
+NOTE: The default configuration is not optimized to run in a production environment or monitor large networks.
 
 ifeval::["{page-component-title}" == "Horizon"]
 ** By default, your time series database is JRobin, which persists RRD files on the local file system.
@@ -18,25 +16,27 @@ endif::[]
 ifeval::["{page-component-title}" == "Meridian"]
 ** By default, your time series database is RRDtool, which persists RRD files on the local file system.
 endif::[]
-* Log in to the web UI and change the `admin` account's default password.
+* Sign in to the web UI and change the `admin` account's default password.
 
-[[requirements-core]]
 == Requirements
+
+The following components and settings are required for a new {page-component-title} instance:
 
 ifeval::["{page-component-title}" == "Meridian"]
 * Credentials to access the Meridian repositories.
 endif::[]
-* A Linux physical server or a virtual machine running a supported <<core/system-requirements.adoc#operating-systems-core, Linux operating system>>.
+* A Linux physical server, or a virtual machine running a supported <<core/system-requirements.adoc#operating-systems-core, Linux operating system>>.
 * Internet access to download the installation packages.
 * A working DNS server, and a localhost and server name that resolve properly.
 * A system user with administrative permissions (`sudo`) to perform installation.
-* If in use: A SELinux policy that permits binding to the ICMP service.
+* A SELinux policy that permits binding to the ICMP service, if necessary.
 +
-Note that failure to include the appropriate SELinux policy may generate an ICMP permission error when starting {page-component-title} (see xref:reference:configuration/selinux.adoc[]).
+NOTE: If you do not include the appropriate SELinux policy, {page-component-title} may generate an ICMP permissions error when starting up (see xref:reference:configuration/selinux.adoc[]).
+
 ifeval::["{page-component-title}" == "Horizon"]
 * To run services in https://docs.docker.com/[Docker], you need https://docs.docker.com/compose/install[Docker Compose] for the service stacks from our examples.
 
-NOTE: On Debian, you must install and configure `sudo` yourself.
+IMPORTANT: On Debian, you must install and configure `sudo` yourself.
 See the https://wiki.debian.org/sudo/[Debian Wiki] for more information.
 endif::[]
 
@@ -162,32 +162,37 @@ endif::[]
 After you start the {page-component-title} core services, you can access the web application at `\http://core-instance-ip:8980/opennms`.
 The default user account is `admin` with the password `admin`.
 
-IMPORTANT: After you log in for the first time, immediately change the `admin` account's password to a secure one.
-
-The first time you log in, {page-component-title} prompts for permission to allow the Data Choices module to collect and publish anonymous usage statistics to https://stats.opennms.org.
-The OpenNMS Group uses this anonymized information to help determine product use and to improve the {page-component-title} software.
-We do not share it with third parties, and we will not use it for sales purposes.
-
-.Data sources collection permission prompt
-image::deployment/core/data-sources.png["Data sources collection permission prompt displaying opt-in and opt-out buttons", 500]
-
-Click *Show Me What is Being Sent* to see xref:operation:deep-dive/admin/configuration/data-collection.adoc[what information we collect].
-Statistics collection and publication happen only if an admin user opts in.
-
-NOTE: Admin users can xref:operation:deep-dive/admin/configuration/data-collection.adoc#disable-data-collection[enable or disable statistics collection] at any time.
-
-. On the top menu bar, click menu:Admin[Change Password].
-. Type your current password and new password in the appropriate fields.
-. Confirm your new password, and click *Submit*.
+IMPORTANT: After you sign in for the first time, you should immediately change the `admin` account's password to a secure one.
 
 We encourage you to use {page-component-title} with individual user accounts instead of the `admin` account.
 If all users have individual accounts, you can see who is completing tasks like clearing or acknowledging alarms.
 
 For information on how to create a personalized user account, see xref:operation:quick-start/users.adoc#create-user[Create a new user] in the Quick Start guide.
 
+The first time you sign in, {page-component-title} prompts for permission to allow the Data Choices module to collect and publish anonymous usage statistics to https://stats.opennms.org:
+
+image::deployment/core/data-sources.png["Data sources collection permission prompt displaying opt-in and opt-out buttons.", 500]
+
+The OpenNMS Group uses this anonymized information to help determine product use and to improve the {page-component-title} software.
+We do not share it with third parties, and we will not use it for sales purposes.
+Click *Show Me What is Being Sent* to see a list of xref:operation:deep-dive/admin/configuration/data-collection.adoc[information that we collect].
+
+NOTE: Statistics collection and publication happen only if an admin user opts in.
+Admin users can xref:operation:deep-dive/admin/configuration/data-collection.adoc#disable-data-collection[enable or disable statistics collection] at any time.
+
+=== Change password
+
+To change your password, follow these steps:
+
+. On the top menu bar, click menu:Admin[Change Password].
+. Type your current password and new password in the appropriate fields.
+. Confirm your new password, and click *Submit*.
+
+Your account's password is updated.
+
 == First monitored node
 
-The default configuration will discover a single node with an interface `127.0.0.1` and detect services exposed on the loopback interface, including the OpenNMS-JVM service.
+The default configuration will discover a single node with an interface `127.0.0.1` and detect services exposed on the loopback interface, including the `OpenNMS-JVM` service.
 Nodes with this service have JMX-based data collection performed on Java JVM statistics such as heap memory and open file handles.
 
 == Related topics
@@ -199,4 +204,3 @@ Nodes with this service have JMX-based data collection performed on Java JVM sta
 == Next steps
 
 See the xref:operation:quick-start/introduction.adoc[Quick Start guide] for more information on setting up and configuring your {page-component-title} instance.
-
