--- a/docs/modules/deployment/pages/core/getting-started.adoc
+++ b/docs/modules/deployment/pages/core/getting-started.adoc
@@ -20,12 +20,12 @@ endif::[]
 
 == Requirements
 
-The following components and settings are required for a new {page-component-title} instance:
+The following components and settings are required to set up a new {page-component-title} instance:
 
 ifeval::["{page-component-title}" == "Meridian"]
 * Credentials to access the Meridian repositories.
 endif::[]
-* A Linux physical server, or a virtual machine running a supported <<core/system-requirements.adoc#operating-systems-core, Linux operating system>>.
+* A Linux physical server, or a virtual machine running a <<core/system-requirements.adoc#operating-systems-core, supported Linux operating system>>.
 * Internet access to download the installation packages.
 * A working DNS server, and a localhost and server name that resolve properly.
 * A system user with administrative permissions (`sudo`) to perform installation.
@@ -34,9 +34,8 @@ endif::[]
 NOTE: If you do not include the appropriate SELinux policy, {page-component-title} may generate an ICMP permissions error when starting up (see xref:reference:configuration/selinux.adoc[]).
 
 ifeval::["{page-component-title}" == "Horizon"]
-* To run services in https://docs.docker.com/[Docker], you need https://docs.docker.com/compose/install[Docker Compose] for the service stacks from our examples.
-
-IMPORTANT: On Debian, you must install and configure `sudo` yourself.
+* To run services in Docker, you need https://docs.docker.com/compose/install[Docker Compose] for the service stacks from our examples.
+* On Debian, you must install and configure `sudo` yourself.
 See the https://wiki.debian.org/sudo/[Debian Wiki] for more information.
 endif::[]
 
@@ -46,7 +45,7 @@ include::../time-sync.adoc[]
 == Set up PostgreSQL
 
 TIP: PostgreSQL 14 and 15 use the `scram-sha-256` https://www.postgresql.org/docs/14/auth-password.html[password authentication] method by default.
-If you use older versions of PostgreSQL, you should change the method in `postgresql.conf` and in `pg_hba.conf` before continuing with the <<install-core-instance, core instance installation>>.
+If you use older versions of PostgreSQL, you should change the method in `postgresql.conf` and in `pg_hba.conf` before installing the {page-component-title} core instance.
 
 [{tabs}]
 ====
@@ -87,7 +86,7 @@ endif::[]
 == Install the core instance
 
 IMPORTANT: For security reasons, {page-component-title} is designed to run within an organization's protected intranet.
-Do not expose the web console and login pages directly to the Internet without appropriate isolation controls (for example, a VPN with multi-factor authentication).
+Do not expose the web console or sign in pages directly to the Internet without appropriate isolation controls (for example, a VPN with multi-factor authentication).
 
 [{tabs}]
 ====
@@ -157,38 +156,36 @@ endif::[]
 ====
 
 [[ga-data-choices]]
-== First-time sign in and data choices
+== First-time sign in
 
 After you start the {page-component-title} core services, you can access the web application at `\http://core-instance-ip:8980/opennms`.
-The default user account is `admin` with the password `admin`.
+The default user credentials are as follows:
+
+* *Username:* `admin`
+* *Password:* `admin`
 
 IMPORTANT: After you sign in for the first time, you should immediately change the `admin` account's password to a secure one.
 
-We encourage you to use {page-component-title} with individual user accounts instead of the `admin` account.
-If all users have individual accounts, you can see who is completing tasks like clearing or acknowledging alarms.
-
-For information on how to create a personalized user account, see xref:operation:quick-start/users.adoc#create-user[Create a new user] in the Quick Start guide.
-
-The first time you sign in, {page-component-title} prompts for permission to allow the Data Choices module to collect and publish anonymous usage statistics to https://stats.opennms.org:
-
-image::deployment/core/data-sources.png["Data sources collection permission prompt displaying opt-in and opt-out buttons.", 500]
-
-The OpenNMS Group uses this anonymized information to help determine product use and to improve the {page-component-title} software.
-We do not share it with third parties, and we will not use it for sales purposes.
-Click *Show Me What is Being Sent* to see a list of xref:operation:deep-dive/admin/configuration/data-collection.adoc[information that we collect].
-
-NOTE: Statistics collection and publication happen only if an admin user opts in.
-Admin users can xref:operation:deep-dive/admin/configuration/data-collection.adoc#disable-data-collection[enable or disable statistics collection] at any time.
-
-=== Change password
-
-To change your password, follow these steps:
+To change your account's password, follow these steps:
 
 . On the top menu bar, click menu:Admin[Change Password].
 . Type your current password and new password in the appropriate fields.
 . Confirm your new password, and click *Submit*.
 
-Your account's password is updated.
+The password is updated.
+
+We encourage you to use {page-component-title} with individual user accounts instead of using only the `admin` account.
+If all users have individual accounts, you can see who is completing tasks (for example, clearing or acknowledging alarms).
+For information on how to create personalized user accounts, see xref:operation:quick-start/users.adoc#create-user[Create a new user] in the Quick Start guide.
+
+=== Usage statistics
+
+The first time you sign in, {page-component-title} notifies you that anonymized usage statistics are collected and published to https://stats.opennms.org.
+The OpenNMS Group uses this information to help determine product use and to improve the {page-component-title} software.
+We do not share it with third parties, and we will not use it for sales purposes.
+Click *Show Me What is Being Sent* to see a list of xref:operation:deep-dive/admin/configuration/data-collection.adoc[information that we collect].
+
+NOTE: Admin users can xref:operation:deep-dive/admin/configuration/data-collection.adoc#disable-data-collection[enable or disable statistics collection] at any time.
 
 == First monitored node
 
