--- a/docs/modules/development/pages/rest/osgi.adoc
+++ b/docs/modules/development/pages/rest/osgi.adoc
@@ -18,9 +18,7 @@ First, create a public interface that must contain jax-rs annotations.
 public interface DataChoiceRestService {
 
     @POST <2>
-    @Path("status")
-    @Consumes({MediaType.APPLICATION_JSON})
-    Response setStatus(@Context HttpServletRequest request, UsageStatisticsStatusDTO dto);
+    void updateCollectUsageStatisticFlag(@Context HttpServletRequest request, @QueryParam("action") String action);
 
     @GET
     @Produces(value={MediaType.APPLICATION_JSON})
@@ -44,9 +42,8 @@ NOTE: The class may or may not repeat the jax-rs annotations from the interface.
 public class DataChoiceRestServiceImpl implements DataChoiceRestService {
 
     @Override
-    public Response setStatus(HttpServletRequest request, UsageStatisticsStatusDTO dto) throws ServletException, IOException {
-        // do something
-        return Response.accepted().build();
+    public void updateCollectUsageStatisticFlag(HttpServletRequest request, String action) {
+       // do something
     }
 
     @Override
