NMS-15658: DOC: Pull changes into foundation branch
Brought changes from NMS-15489, excluding data choices info. Improvements on existing content for users, notifications, and getting started.

--- a/docs/modules/deployment/pages/core/getting-started.adoc
+++ b/docs/modules/deployment/pages/core/getting-started.adoc
@@ -3,14 +3,12 @@
 = Installation and Configuration
 
 This section explains how to install and configure a new {page-component-title} instance.
-
-[[objectives-setup-core]]
-== Objectives
+It describes how to do the following tasks:
 
 * Install all required OpenNMS {page-component-title} components, including PostgreSQL, on a single node.
 * Run {page-component-title} core and PostgreSQL with the default configuration.
 +
-NOTE: The default configuration is not optimized to run in production or monitor large networks.
+NOTE: The default configuration is not optimized to run in a production environment or monitor large networks.
 
 ifeval::["{page-component-title}" == "Horizon"]
 ** By default, your time series database is JRobin, which persists RRD files on the local file system.
@@ -18,25 +16,26 @@ endif::[]
 ifeval::["{page-component-title}" == "Meridian"]
 ** By default, your time series database is RRDtool, which persists RRD files on the local file system.
 endif::[]
-* Log in to the web UI and change the `admin` account's default password.
+* Sign in to the web UI and change the `admin` account's default password.
 
-[[requirements-core]]
 == Requirements
+
+The following components and settings are required to set up a new {page-component-title} instance:
 
 ifeval::["{page-component-title}" == "Meridian"]
 * Credentials to access the Meridian repositories.
 endif::[]
-* A Linux physical server or a virtual machine running a supported <<core/system-requirements.adoc#operating-systems-core, Linux operating system>>.
+* A Linux physical server, or a virtual machine running a <<core/system-requirements.adoc#operating-systems-core, supported Linux operating system>>.
 * Internet access to download the installation packages.
 * A working DNS server, and a localhost and server name that resolve properly.
 * A system user with administrative permissions (`sudo`) to perform installation.
-* If in use: A SELinux policy that permits binding to the ICMP service.
+* A SELinux policy that permits binding to the ICMP service, if necessary.
 +
-Note that failure to include the appropriate SELinux policy may generate an ICMP permission error when starting {page-component-title} (see xref:reference:configuration/selinux.adoc[]).
+NOTE: If you do not include the appropriate SELinux policy, {page-component-title} may generate an ICMP permissions error when starting up (see xref:reference:configuration/selinux.adoc[]).
+
 ifeval::["{page-component-title}" == "Horizon"]
 * To run services in https://docs.docker.com/[Docker], you need https://docs.docker.com/compose/install[Docker Compose] for the service stacks from our examples.
-
-NOTE: On Debian, you must install and configure `sudo` yourself.
+On Debian, you must install and configure `sudo` yourself.
 See the https://wiki.debian.org/sudo/[Debian Wiki] for more information.
 endif::[]
 
@@ -46,7 +45,7 @@ include::../time-sync.adoc[]
 == Set up PostgreSQL
 
 TIP: PostgreSQL 14 and 15 use the `scram-sha-256` https://www.postgresql.org/docs/14/auth-password.html[password authentication] method by default.
-If you use older versions of PostgreSQL, you should change the method in `postgresql.conf` and in `pg_hba.conf` before continuing with the <<install-core-instance, core instance installation>>.
+If you use older versions of PostgreSQL, you should change the method in `postgresql.conf` and in `pg_hba.conf` before installing the {page-component-title} core instance.
 
 [{tabs}]
 ====
@@ -87,7 +86,7 @@ endif::[]
 == Install the core instance
 
 IMPORTANT: For security reasons, {page-component-title} is designed to run within an organization's protected intranet.
-Do not expose the web console and login pages directly to the Internet without appropriate isolation controls (for example, a VPN with multi-factor authentication).
+Do not expose the web console or sign in pages directly to the Internet without appropriate isolation controls (for example, a VPN with multi-factor authentication).
 
 [{tabs}]
 ====
@@ -160,9 +159,11 @@ endif::[]
 == First-time sign in and data choices
 
 After you start the {page-component-title} core services, you can access the web application at `\http://core-instance-ip:8980/opennms`.
-The default user account is `admin` with the password `admin`.
+The default user credentials are as follows:
+* *Username:* `admin`
+* *Password:* `admin`
 
-IMPORTANT: After you log in for the first time, immediately change the `admin` account's password to a secure one.
+IMPORTANT: After you sign in for the first time, you should immediately change the `admin` account's password to a secure one.
 
 The first time you log in, {page-component-title} prompts for permission to allow the Data Choices module to collect and publish anonymous usage statistics to https://stats.opennms.org.
 The OpenNMS Group uses this anonymized information to help determine product use and to improve the {page-component-title} software.
@@ -176,18 +177,20 @@ Statistics collection and publication happen only if an admin user opts in.
 
 NOTE: Admin users can xref:operation:deep-dive/admin/configuration/data-collection.adoc#disable-data-collection[enable or disable statistics collection] at any time.
 
+To change your account's password, follow these steps:
+
 . On the top menu bar, click menu:Admin[Change Password].
 . Type your current password and new password in the appropriate fields.
 . Confirm your new password, and click *Submit*.
+The password is updated.
 
 We encourage you to use {page-component-title} with individual user accounts instead of the `admin` account.
 If all users have individual accounts, you can see who is completing tasks like clearing or acknowledging alarms.
-
 For information on how to create a personalized user account, see xref:operation:quick-start/users.adoc#create-user[Create a new user] in the Quick Start guide.
 
 == First monitored node
 
-The default configuration will discover a single node with an interface `127.0.0.1` and detect services exposed on the loopback interface, including the OpenNMS-JVM service.
+The default configuration will discover a single node with an interface `127.0.0.1` and detect services exposed on the loopback interface, including the `OpenNMS-JVM` service.
 Nodes with this service have JMX-based data collection performed on Java JVM statistics such as heap memory and open file handles.
 
 == Related topics
