--- a/opennms-assemblies/minion/src/main/filtered/debian/changelog
+++ b/opennms-assemblies/minion/src/main/filtered/debian/changelog
@@ -1,3 +1,12 @@
+opennms-minion (31.0.8-1) stable; urgency=medium
+
+  * Minor release containing several small bug fixes and enhancements.
+
+    For details on what has changed, see:
+    https://docs.opennms.com/horizon/31.0.8/index.html
+
+ -- OpenNMS Release Manager <opennms@opennms.org>  Tue, 09 May 2023 12:05:56 -0400
+
 opennms-minion (31.0.7-1) stable; urgency=medium
 
   * Minor release containing several small bug fixes.
