--- a/docs/modules/operation/nav.adoc
+++ b/docs/modules/operation/nav.adoc
@@ -53,6 +53,8 @@
 *** xref:deep-dive/service-assurance/service-monitors.adoc[]
 *** xref:deep-dive/service-assurance/scheduled-outages.adoc[]
 *** xref:deep-dive/service-assurance/application-perspective-monitoring/introduction.adoc[]
+*** xref:deep-dive/service-assurance/shell/introduction.adoc[]
+**** xref:deep-dive/service-assurance/shell/pollerd-schedule.adoc[]
 
 ** xref:deep-dive/device-config-backup/introduction.adoc[]
 *** xref:deep-dive/device-config-backup/ssh.adoc[]
@@ -80,6 +82,7 @@
 ***** xref:deep-dive/performance-data-collection/shell/adhoc-collection.adoc[]
 ***** xref:deep-dive/performance-data-collection/shell/measurements.adoc[]
 ***** xref:deep-dive/performance-data-collection/shell/stress-testing.adoc[]
+***** xref:deep-dive/performance-data-collection/shell/collectd-schedule.adoc[]
 
 ** xref:deep-dive/events/introduction.adoc[]
 *** xref:deep-dive/events/event-configuration.adoc[]
