--- a/docs/modules/operation/pages/deep-dive/service-assurance/shell/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/service-assurance/shell/introduction.adoc
@@ -1,7 +1,7 @@
 
 = Shell Commands
 
-A number of Karaf Shell commands are made available to help administer and diagnose issues related to service assurance.
+A number of Karaf Shell commands are available to help administer and diagnose issues related to service assurance.
 
 To use the commands, log into the Karaf Shell on your system using:
 
@@ -10,7 +10,7 @@ To use the commands, log into the Karaf Shell on your system using:
 ssh -p 8101 admin@localhost
 ----
 
-NOTE: The Karaf shell uses the same credential as the web interface.
+NOTE: The Karaf shell uses the same credentials as the web interface.
       Users must be associated with the `ADMIN` role to access the shell.
 
-IMPORTANT: In order to keep the session open while executing long-running tasks without any user input add `-o ServerAliveInterval=10` to your ssh command.
+IMPORTANT: To keep the session open while performing long-running tasks without any user input add `-o ServerAliveInterval=10` to your ssh command.
