--- a/docs/modules/deployment/pages/repos/rhel-centos/meridian-rhel7.adoc
+++ b/docs/modules/deployment/pages/repos/rhel-centos/meridian-rhel7.adoc
@@ -1,10 +1,10 @@
 .Add repository and import GPG key
-[source, console]
+[source, console, subs="attributes,callouts"]
 ----
 cat << EOF | sudo tee /etc/yum.repos.d/opennms-meridian.repo
 [meridian]
 name=Meridian for Red Hat Enterprise Linux and CentOS
-baseurl=https://REPO_USER:REPO_PASS@meridian.opennms.com/packages/2021/stable/rhel7<1>
+baseurl=https://REPO_USER:REPO_PASS@meridian.opennms.com/packages/{latest-meridian-stable}/stable/rhel7<1>
 gpgcheck=1
 gpgkey=http://yum.opennms.org/OPENNMS-GPG-KEY
 EOF
