NMS-13908: Codify code copyright conventions and guidelines
NMS-13908: Codify code copyright conventions and guidelines - added topic to the nav file for TOC.

--- a/docs/modules/development/nav.adoc
+++ b/docs/modules/development/nav.adoc
@@ -2,6 +2,7 @@
 .xref:development.adoc[]
 
 * xref:build-from-source.adoc[]
+** xref:source-copyright.adoc[Copyright Conventions and Guidelines]
 
 * xref:osgi/osgi-and-opennms.adoc[]
 
