--- a/docs/modules/deployment/pages/minion/message-broker/kafka.adoc
+++ b/docs/modules/deployment/pages/minion/message-broker/kafka.adoc
@@ -71,19 +71,19 @@ config:property-set sasl.jaas.config 'org.apache.kafka.common.security.scram.Scr
 config:update
 ----
 
-NOTE: You can configure module-specific values for modules `sink`, `rpc`, and `twin` by replacing PID `org.opennms.core.ipc.kafka` in the `config:edit` command with `org.opennms.core.ipc.sink.kafka`, `org.opennms.core.ipc.rpc.kafka`, and `org.opennms.core.ipc.twin.kafka`, respectively.
-      Module-specific config takes precedence over common config specified in config for PID `org.opennms.core.ipc.kafka`.
+NOTE: You can configure module-specific values for modules `sink`, `rpc`, and `twin` by replacing `org.opennms.core.ipc.kafka` in the `config:edit` command with `org.opennms.core.ipc.sink.kafka`, `org.opennms.core.ipc.rpc.kafka`, and `org.opennms.core.ipc.twin.kafka`, respectively.
+      Module-specific configuration values take precedence over common configuration values.
 
 Exit the Karaf shell with kbd:[Ctrl+d]
 
 By default, the Minion will use a topic prefix of `OpenNMS`.
-If you chose to use a different prefix in core (for instance, to use a single Apache Kafka cluster with multiple {page-component-title} instances), change the topic prefix by setting the `org.opennms.instance.id` system property in `$MINION_HOME/etc/custom.system.properties`:
+If you chose to use a different prefix in core (for example, to use a single Apache Kafka cluster with multiple {page-component-title} instances), change the topic prefix by setting the `org.opennms.instance.id` system property in `$MINION_HOME/etc/custom.system.properties`:
 [source, properties]
 ----
 org.opennms.instance.id=MyNMS<1>
 ----
 
-<1> Change `MyNMS` to the value used by the core instance of {page-component-title} that this minion should be connected to.
+<1> Change `MyNMS` to the prefix used by the {page-component-title} instance that this Minion should connect to.
 
 .Restart the Minion to apply the configuration
 [source,console]
